--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CFB Picks</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8">
+  <title>CFB Picks & Predicted Scores</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:12px;background:#0b0b0b;color:#eaeaea}h1,h2{margin:6px 0}button,input{font-size:16px;padding:8px;border-radius:8px;border:1px solid #333;background:#1a1a1a;color:#eaeaea}table{width:100%;border-collapse:collapse;margin-top:8px}th,td{padding:10px;border-bottom:1px solid #222;font-size:14px}th{text-align:left;color:#bbb}#controls{display:flex;gap:8px;align-items:center;margin:8px 0}#search{flex:1}small{color:#999}</style>
 </head>
 <body>
-<header>
-  <h1>College Football Picks</h1>
-  <input id="search" type="search" placeholder="Search..." />
-  <button id="refresh">Refresh</button>
-</header>
-<main>
-  <table id="picksTable">
+  <h1>CFB Dashboard</h1>
+  <div id="controls">
+    <input id="search" placeholder="Search team…">
+    <button id="refresh">Refresh</button>
+  </div>
+
+  <h2>Predicted Scores</h2>
+  <small>Derived from market total and home spread.</small>
+  <table id="scoresTable">
     <thead>
       <tr>
-        <th>Date</th><th>Game</th><th>Pick</th><th>Line</th><th>Odds</th><th>Confidence</th>
+        <th>Kickoff</th>
+        <th>Matchup</th>
+        <th>Pred Away</th>
+        <th>Pred Home</th>
+        <th>Total</th>
+        <th>Home Spread</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
-</main>
-<script src="script.js"></script>
+
+  <h2 style="margin-top:18px;">Conservative Picks</h2>
+  <table id="picksTable">
+    <thead>
+      <tr>
+        <th>Kickoff</th>
+        <th>Matchup</th>
+        <th>Pick</th>
+        <th>Line</th>
+        <th>Odds</th>
+        <th>Model %</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <script src="script.js"></script>
 </body>
 </html>
