--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta charset="utf-8">
   <title>CFB Picks & Predicted Scores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:12px;background:#0b0b0b;color:#eaeaea}h1,h2{margin:6px 0}button,input{font-size:16px;padding:8px;border-radius:8px;border:1px solid #333;background:#1a1a1a;color:#eaeaea}table{width:100%;border-collapse:collapse;margin-top:8px}th,td{padding:10px;border-bottom:1px solid #222;font-size:14px}th{text-align:left;color:#bbb}#controls{display:flex;gap:8px;align-items:center;margin:8px 0}#search{flex:1}small{color:#999}</style>
+  <style>
+    body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:12px;background:#0b0b0b;color:#eaeaea}
+    h1,h2{margin:6px 0}
+    button,input{font-size:16px;padding:8px;border-radius:8px;border:1px solid #333;background:#1a1a1a;color:#eaeaea}
+    table{width:100%;border-collapse:collapse;margin-top:8px}
+    th,td{padding:10px;border-bottom:1px solid #222;font-size:14px}
+    th{text-align:left;color:#bbb}
+    #controls{display:flex;gap:8px;align-items:center;margin:8px 0}
+    #search{flex:1}
+    small{color:#999}
+  </style>
 </head>
 <body>
   <h1>CFB Dashboard</h1>
@@ -14,7 +24,7 @@
   </div>
 
   <h2>Predicted Scores</h2>
-  <small>Derived from market total and home spread.</small>
+  <small>Derived from Mat’s College Football Score Prediction Model.</small>
   <table id="scoresTable">
     <thead>
       <tr>
