--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CFB Picks & Predicted Scores</title>
+  <title>CFB Predicted Scores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:12px;background:#0b0b0b;color:#eaeaea}
@@ -34,21 +34,6 @@
         <th>Pred Home</th>
         <th>Total</th>
         <th>Home Spread</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <h2 style="margin-top:18px;">Conservative Picks</h2>
-  <table id="picksTable">
-    <thead>
-      <tr>
-        <th>Kickoff</th>
-        <th>Matchup</th>
-        <th>Pick</th>
-        <th>Line</th>
-        <th>Odds</th>
-        <th>Model %</th>
       </tr>
     </thead>
     <tbody></tbody>
